--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="http://maps.googleapis.com/maps/api/js" sync defer></script>
 </body>
 </html>
