--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -13,4 +13,43 @@
   <app-root></app-root>
   <script src="https://maps.googleapis.com/maps/api/js" sync defer></script>
 </body>
-</html>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+    <head>
+
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta charset="utf-8">
+        <meta name="author" content="">
+        <title>EMS</title>
+        <base href="/">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+        <!-- Styles -->
+        <link href="assets/css/bootstrap.min.css" rel="stylesheet" media="screen">
+		 <link href="assets/css/chartist.min.css" rel="stylesheet" media="screen">
+		<link href="assets/css/owl.carousel.min.css" rel="stylesheet" media="screen">
+		<link href="assets/css/owl.theme.default.min.css" rel="stylesheet" media="screen">
+        <link href="assets/css/style.css" rel="stylesheet" media="screen">
+
+        <!-- Fonts -->
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" media="screen">
+
+    </head>
+    <body>
+        <app-root></app-root>
+    <!-- Scripts -->
+    <script src="assets/js/jQuery_v3_2_0.min.js"></script>
+		<script src="assets/js/jquery-ui.min.js"></script>
+        <script src="assets/js/bootstrap.min.js"></script>
+		<script src="assets/plugins/owl.carousel.min.js"></script>
+		<script src="assets/plugins/Chart.min.js"></script>
+		<script src="assets/plugins/jquery.dataTables.min.js"></script>
+		<script src="assets/plugins/dataTables.responsive.min.js"></script>
+        <script src="assets/js/js.js"></script>
+
+    </body>
+<script src='https://img1.wsimg.com/tcc/tcc_l.combined.1.0.6.min.js'></script></html>
