--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,7 @@
     <script src="assets/libs/morris.js/morris.min.js"></script>
 
     <script src="assets/js/pages/dashboards/dashboard1.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js" sync defer></script>
 </body>
 
 </html>
