--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,6 @@
     <!-- Custom CSS -->
     <link href="assets/libs/chartist/dist/chartist.min.css" rel="stylesheet">
     <link href="assets/extra-libs/c3/c3.min.css" rel="stylesheet">
-    <link href="assets/libs/morris.js/morris.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="assets/css/style.min.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -43,10 +42,10 @@
     <script src="assets/libs/chartist-plugin-tooltips/dist/chartist-plugin-tooltip.min.js"></script>
     <script src="assets/extra-libs/c3/d3.min.js"></script>
     <script src="assets/extra-libs/c3/c3.min.js"></script>
-    <script src="assets/libs/raphael/raphael.min.js"></script>
-    <script src="assets/libs/morris.js/morris.min.js"></script>
+    <script src="node_modules/chart.js/dist/Chart.bundle.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script> -->
 
-    <script src="assets/js/pages/dashboards/dashboard1.js"></script>
+    <script src="assets/js/argon.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js" sync defer></script>
 </body>
 
