--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,7 @@
     <base href="/">
     <!-- Custom CSS -->
     <link href="assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
-    <link href="assets/libs/chartist/dist/chartist.min.css" rel="stylesheet">
-    <link href="assets/extra-libs/c3/c3.min.css" rel="stylesheet">
+    <script src="node_modules/chart.js/src/chart.js"></script>
     <!-- Custom CSS -->
     <link href="assets/css/style.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -42,9 +41,9 @@
     <script src="assets/js/custom.min.js"></script>
     <script src="assets/libs/chartist/dist/chartist.min.js"></script>
     <script src="assets/libs/chartist-plugin-tooltips/dist/chartist-plugin-tooltip.min.js"></script>
-    <script src="assets/extra-libs/c3/d3.min.js"></script>
+    <!-- <script src="assets/extra-libs/c3/d3.min.js"></script>
     <script src="assets/extra-libs/c3/c3.min.js"></script>
-    <script src="node_modules/chart.js/dist/Chart.bundle.js"></script>
+    <script src="node_modules/chart.js/dist/Chart.bundle.js"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script> -->
 
     <script src="assets/js/argon.js"></script>
